<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainMenuViewModel"
            type="com.klimaatmobiel.ui.viewModels.MainMenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/go_logo" />

        <ImageView
            android:id="@+id/klimaatmobiel_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/klimaatmobiel_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_image"
     />

        <EditText
            style="@style/AppTheme"
            android:id="@+id/project_code_text"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_hint"
            android:inputType="textPersonName"
            android:text="@={mainMenuViewModel.groupCode}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/webshop_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/klimaatmobiel_image"
            app:layout_constraintVertical_bias="0.96" />

        <Button
            android:id="@+id/webshop_button"
            style="@style/red_button_style"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:onClick="@{() -> mainMenuViewModel.onClickNavigateToAddGroup()}"
            android:padding="@dimen/button_padding"
            android:text="@string/webshop_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/main_menu_loading_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:apiStatus="@{mainMenuViewModel.status}"
            app:layout_constraintTop_toBottomOf="@id/webshop_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/loading_webshop_hint" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

