...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/input_pupil_first_name"
            style="@style/edit_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
...
