...
    <string name="app_name">Klimaatmobiel</string>
    <string name="welcome">Welkom in de klimaatmobiel app</string>
    <string name="start_button_text">Ga verder</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_project_button_text">start module</string>
    <string name="webshop_button_text">naar webshop</string>
    <string name="shopping_cart">Winkelwagentje</string>
    <string name="budget_text">Budget: 20</string>
    <string name="project_name">Project:</string>
    <string name="finish_order_text">Rond bestelling af</string>
    <string name="details_text">Details</string>
    <string name="klimaatmobiel_text">Klimaatmobiel</string>
...
    <string name="project_description">project omschrijving</string>
    <string name="project_title">Project naam</string>
    <string name="filter_hint">Filter op naam</string>
    <string name="complete_order">Plaats bestelling</string>
    <string name="add_to_cart_description">Voeg het item toe aan de winkelmand</string>
    <string name="product_image_description">Product afbeelding</string>
    <string name="project_code_error">Er is iets fout gelopen!</string>
    <string name="error_connection">Er is geen internet! Probeer later opnieuw!</string>
    <string name="loading_webshop_hint">Loading webshop</string>
    <string name="project_afbeelding_contentdescription">Afbeelding van het project</string>
    <string name="nav_title_webshop">Webshop</string>
    <string name="nav_title_project_info">Project info</string>
    <string name="nav_title_winkelmandje">Winkelmandje</string>
...
